Fix overlapping videos issue.

--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -22,12 +22,14 @@
   width: 100%;
   height: calc(100vh - 70px);
   border: 1px solid white;
+  display: grid;
+  grid-template-rows: repeat(2,1fr);
 }
 
 .videoContainer{
   width: 100%;
   height: 100%;
-  display: grid;
+  overflow: hidden;
 }
 
 .videoElement{
@@ -36,10 +38,11 @@
 }
 
 .avatarContainer{
-  height: 100%;
-  border: 1px solid yellow;
-  background: rgba(255,255,0,0.2);
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid yellow;
+  background: rgba(255,255,0,0.2);
 }
